REST EventService
