# internal/event/dto/mapper.go
@@ -1,0 +1,24 @@
+package dto
+
+import "github.com/MingPV/EventService/internal/entities"
+
+func ToEventResponse(event *entities.Event) *EventResponse {
+	return &EventResponse{
+		ID:               event.ID,
+		EventName:        event.EventName,
+		EventDescription: event.EventDescription,
+		StartAt:          event.StartAt,
+		EndAt:            event.EndAt,
+		MainImageURL:     event.MainImageURL,
+		RegisterStartDt:  event.RegisterStartDt,
+		RegisterCloseDt:  event.RegisterCloseDt,
+	}
+}
+
+func ToEventResponseList(events []*entities.Event) []*EventResponse {
+	result := make([]*EventResponse, 0, len(events))
+	for _, e := range events {
+		result = append(result, ToEventResponse(e))
+	}
+	return result
+}
