# pkg/routes/public_routes.go
@@ -4,10 +4,15 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
 
-	// Order
-	orderHandler "github.com/MingPV/EventService/internal/order/handler/rest"
-	orderRepository "github.com/MingPV/EventService/internal/order/repository"
-	orderUseCase "github.com/MingPV/EventService/internal/order/usecase"
+	// // Order
+	// orderHandler "github.com/MingPV/EventService/internal/order/handler/rest"
+	// orderRepository "github.com/MingPV/EventService/internal/order/repository"
+	// orderUseCase "github.com/MingPV/EventService/internal/order/usecase"
+
+	// Event
+	eventHandler "github.com/MingPV/EventService/internal/event/handler/rest"
+	eventRepository "github.com/MingPV/EventService/internal/event/repository"
+	eventUseCase "github.com/MingPV/EventService/internal/event/usecase"
 )
 
 func RegisterPublicRoutes(app fiber.Router, db *gorm.DB) {
@@ -16,18 +21,31 @@ func RegisterPublicRoutes(app fiber.Router, db *gorm.DB) {
 
 	// === Dependency Wiring ===
 
-	// Order
-	orderRepo := orderRepository.NewGormOrderRepository(db)
-	orderService := orderUseCase.NewOrderService(orderRepo)
-	orderHandler := orderHandler.NewHttpOrderHandler(orderService)
+	// // Order
+	// orderRepo := orderRepository.NewGormOrderRepository(db)
+	// orderService := orderUseCase.NewOrderService(orderRepo)
+	// orderHandler := orderHandler.NewHttpOrderHandler(orderService)
+
+	// Event
+	eventRepo := eventRepository.NewGormEventRepository(db)
+	eventService := eventUseCase.NewEventService(eventRepo)
+	eventHandler := eventHandler.NewHttpEventHandler(eventService)
 
 	// === Public Routes ===
 
-	// Order routes
-	orderGroup := api.Group("/orders")
-	orderGroup.Get("/", orderHandler.FindAllOrders)
-	orderGroup.Get("/:id", orderHandler.FindOrderByID)
-	orderGroup.Post("/", orderHandler.CreateOrder)
-	orderGroup.Patch("/:id", orderHandler.PatchOrder)
-	orderGroup.Delete("/:id", orderHandler.DeleteOrder)
+	// // Order routes
+	// orderGroup := api.Group("/orders")
+	// orderGroup.Get("/", orderHandler.FindAllOrders)
+	// orderGroup.Get("/:id", orderHandler.FindOrderByID)
+	// orderGroup.Post("/", orderHandler.CreateOrder)
+	// orderGroup.Patch("/:id", orderHandler.PatchOrder)
+	// orderGroup.Delete("/:id", orderHandler.DeleteOrder)
+
+	// Event routes
+	eventGroup := api.Group("/events")
+	eventGroup.Get("/", eventHandler.FindAllEvents)
+	eventGroup.Get("/:id", eventHandler.FindEventByID)
+	eventGroup.Post("/", eventHandler.CreateEvent)
+	eventGroup.Patch("/:id", eventHandler.PatchEvent)
+	eventGroup.Delete("/:id", eventHandler.DeleteEvent)
 }
